Added user stories and have profile page rendering

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,13 +1,12 @@
-<h2>Already have a character? What's your username?:</h2>
+<h2>Already have a username? Log in here:</h2>
 <form action="" method="POST">
-    <input type="text" placeholder="username">
+    <input type="text" name="username" placeholder="username">
     <input type="button" value="submit"Submit>
 </form>
 <br>
 <br>
-<h2>New user or new character? Fill out the following:</h2>
+<h2>New user? Fill out the following:</h2>
 <form action="" method="POST">
-    <input type="text" placeholder="Pick a username">
-    <input type="text" placeholder="Pick character class">
+    <input type="text" name="newuser" placeholder="Pick a username">
     <input type="button" value="submit"Submit>
 </form>
