--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,7 +7,4 @@
 <br>
 <br>
 <h2>New user?</h2>
-<form action="/" method="POST">
-    <input type="text" name="newuser" placeholder="Pick a username">
-    <input type="button" value="submit"Submit>
-</form> 
+<a href="/add">Click here to create a username</a>
