--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,3 +1,6 @@
-<h1>Welcome, {{name}}</h1>
+<h1>Welcome, {{users.name}}</h1>
 <h3>Choose the character you would like to play with today:</h3>
 
+
+
+<input type="button" value="Create a New Character" onclick="@("window.location.href='" + @Url.Action("actionName", "controllerName") + "'");" />
