delete character function working

--- a/views/character.hbs
+++ b/views/character.hbs
@@ -54,6 +54,7 @@
         <input type="integer" id="charisma" name="charisma" value="{{charisma}}"/>
     </div>
     <input type="submit"Submit/>
+    <a href="/character/{{id}}/delete">Delete</a>
 </form>
 </body>
 </html>
