css not yet working

--- a/views/aid.hbs
+++ b/views/aid.hbs
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="../public/styles/main.css">
+</head>
+<body>
+
 <p>First die roll: {{roll}}<br>
     Second die roll: {{roll2}}<br>
     Modifier: add your bond with the character you are aiding/interfering with</p>
@@ -9,3 +16,5 @@
 <p>They take +1 or -2, your choice. You also expose yourself to danger, retribution, or cost.</p>
 <h3>6 and below</h3>
 <p>You fail. Mark experience</p>
+
+</body>
