--- a/views/aid.hbs
+++ b/views/aid.hbs
@@ -1,25 +1,26 @@
   <div class="row">
-    <h4 class="center light-green darken-3">Aid/Interfere</h4>
+    <h4 class="center black white-text">Aid/Interfere</h4>
     <div class="col s2">
       First die roll: <h4>{{roll}} +</h4>
     </div>
     <div class="col s2">
         Second die roll: <h4>{{roll2}} + </h4><br><br>
-        Your total roll: <h1>{{sum}} + bond</h1>
+        
+        Your total roll: <div class="card"><h1>{{sum}} + bond</h1></div>
     </div>
     <div class="col s2">
         Modifier: <h4>bond</h4>
     </div>
     <div class="col s4">
-      <h4 class="indigo lighten-2">10+</h4>
+      <h4 class="black white-text">10+</h4>
         <p>They take +1 or -2, your choice</p>
-      <h4 class="indigo lighten-2">7-9</h4>
+      <h4 class="black white-text">7-9</h4>
         <p>They take +1 or -2, your choice. You also expose yourself to danger, retribution, or cost.</p>
-      <h4 class="indigo lighten-2">6 and below</h4>
+      <h4 class="black white-text">6 and below</h4>
         <p>You fail. Mark experience</p>
     </div>
   </div>
   <div class="center">
-    <a href="/character/{{id}}/" class="btn indigo lighten-2 ">Character Sheet</a>
+    <a href="/character/{{id}}/" class="btn black ">Character Sheet</a>
   </div>
 </body>
