--- a/views/defend.hbs
+++ b/views/defend.hbs
@@ -1,28 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <title>Add a Character</title>
-</head>
-<body>
-    
  <div class="row">
-    <h4 class="center light-green darken-3">Defend</h4>
+    <h4 class="center black white-text">Defend</h4>
     <div class="col s2">
       First die roll: <h4>{{roll}} +</h4>
     </div>
     <div class="col s2">
         Second die roll: <h4>{{roll2}} + </h4><br><br>
-        Your total roll: <h1>{{sum}}</h1>
+        Your total roll: <div class="card"><h1>{{sum}}</h1></div>
     </div>
     <div class="col s2">
         Modifier: <h4>{{mod}}</h4></p>
@@ -36,15 +19,14 @@
             <li>- Deal damage to that attacker equal to your level</li>
         </ul>
         </p>
-        <h4 class="indigo lighten-2">10+</h4>
+        <h4 class="black white-text">10+</h4>
             <p>Hold 3</p>
-        <h4 class="indigo lighten-2">7-9</h4>
+        <h4 class="black white-text">7-9</h4>
             <p>Hold 1</p>
-        <h4 class="indigo lighten-2">6 and below</h4>
+        <h4 class="black white-text">6 and below</h4>
             <p>You fail. Mark experience</p>
     </div>
  </div>  
  <div class="center">
-    <a href="/character/{{id}}/" class="btn indigo lighten-2 ">Character Sheet</a>
+    <a href="/character/{{id}}/" class="btn black">Character Sheet</a>
   </div>
-  </body>
