--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,7 +1,8 @@
 <h3>Welcome, {{users.name}}</h3>
 <div class="row">
+  
     <div class="col s5">
-      <h4 class="black white-text">Choose your character</h4>
+      <i class="material-icons prefix large">person</i>
       <div>
         {{#each characters}}
           <ul class="collection s6">
@@ -10,9 +11,13 @@
         {{/each}}
       </div>
     </div>
-    <div class="col s5 offset-s2">
-      <h4 class="black white-text">New campaign?</h4>
-      <i class="material-icons prefix large">person_add</i>
-      <input class="btn black" value="Create a New Character" onclick="location.href='/profile/{{users.id}}/add'" />
+    <div class="col s1 offset-s2">
+          <i class="material-icons prefix large">person_add</i>
+    </div>
+    <div class="col s5 offset-s1">
+      {{!-- <h4 class="black white-text">New campaign?</h4> --}}
+        
+          <input class="btn black" value="Create New Character" onclick="location.href='/profile/{{users.id}}/add'" />
+        </div>
     </div>
 </div>
