styled all move views

--- a/views/character.hbs
+++ b/views/character.hbs
@@ -140,7 +140,13 @@
             </div>
         </div>
         <div>
-            <p>TAKE WATCH:<br><a href='/character/{{id}}/{{wisdom}}/watch' class="btn black">Someone approaches while on watch (+WIS)</a></p>
+            <p>TAKE WATCH:<br>
+            <div class="card black">
+                <div class="card-content white-text">
+                    When you're on watch and something approaches the camp, </p>
+                    <a href='/character/{{id}}/{{wisdom}}/watch' class="btn black">Roll +WIS</a>
+                </div>
+            </div>
         </div>
         <div>
             <p>LEVEL UP:<br> 
@@ -166,7 +172,6 @@
                 </div>
             </div>
         </div>
-    
         <div>
             <p>CAROUSE:<br>
             <div class="card black">
@@ -182,7 +187,7 @@
             <p>SUPPLY:<br>
             <div class="card black">
                 <div class="card-content white-text">
-                    <p>When you go to buy something with gold on hand, if it's something readily available in the settlement you're in, you can buy it at market price. If it's something special, beyond what's usually available here, or non-mundane, roll + CHA.</p>
+                    <p>When you go to buy something with gold on hand, if it's something readily available in the settlement you're in, you can buy it at market price. If it's something special, beyond what's usually available here, or non-mundane,</p>
                     <a href='/character/{{id}}/{{charisma}}/supply' class="btn black">Roll + CHA</a>
                 </div>
             </div>
@@ -211,8 +216,14 @@
                 </div>
             </div>
         </div>
-         <div>
-            <p>OUTSTANDING WARRANTS:<br><a href='/character/{{id}}/{{charisma}}/warrants' class="btn black">Return somewhere you've caused trouble (+CHA)</a></p>
+        <div>
+            <p>OUTSTANDING WARRANTS:<br>
+            <div class="card black">
+                <div class="card-content white-text">
+                    When you return to a civilised place in which you've caused trouble before,</p>
+                    <a href='/character/{{id}}/{{charisma}}/warrants' class="btn black">Roll +CHA</a>
+                </div>
+            </div>
         </div>
         <div>
             <p>BOLSTER:<br>
@@ -226,14 +237,19 @@
             <p>UNDERTAKE A PERILOUS JOURNEY:<br>
             <div class="card black">
                 <div class="card-content white-text">
-                    <p>When you travel through hostile territory, choose one member of the party to act as trailblazer, one to scout ahead, and one to be quartermaster (the same character cannot have two jobs). If you do not have enough party members or choose not to assign a job, treat that job as if it had rolled a 6. Each character with a job to do rolls +WIS.</p>
+                    <p>When you travel through hostile territory, choose one member of the party to act as trailblazer, one to scout ahead, and one to be quartermaster (the same character cannot have two jobs). If you do not have enough party members or choose not to assign a job, treat that job as if it had rolled a 6. Each character with a job to do </p>
                     <a href='/character/{{id}}/{{wisdom}}/journey' class="btn black">Roll + WIS</a>
                 </div>
             </div>
         </div>
         <div>
-            <p>LAST BREATH:<br> <a href='/character/{{id}}/last' class="btn black">When dying see beyond the Black Gates (+0)</a></p>
-        </div>
+            <p>LAST BREATH:<br> 
+            <div class="card black">
+                <div class="card-content white-text">
+                    When you're dying you catch a glimpse of what lies beyond the Black Gates of Death's Kingdom (the GM will describe it). Then roll (just roll, +nothing-yeah, Death doesn't care how tough or cool you are).
+                    <a href='/character/{{id}}/last' class="btn black">Roll</a></p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
