--- a/views/watch.hbs
+++ b/views/watch.hbs
@@ -14,7 +14,7 @@
         <h4 class="black white-text">10+</h4>
             <p>You're able to wake the camp and prepare a response. The camp takes +1 forward</p>
         <h4 class="black white-text">7-9</h4>
-            <p>You react just a moment too late; teh camp is awake but hasn't had time to prepare
+            <p>You react just a moment too late; the camp is awake but hasn't had time to prepare
             </p>
         <h4 class="black white-text">6 and below</h4>
             <p>Whatever lurks outside the campfire's light has the drop on you. Mark experience</p>
