--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,7 +18,7 @@
 <body class="grey darken-2">
       <nav>
     <div class="nav-wrapper black">
-      <a href="/" class="brand-logo left">DungeonWorld<img src="../../public/DWLOGO.jpg"></a>
+      <a href="/" class="brand-logo left">DungeonWorld</a>
     </div>
   </nav>
   <div class="container">
