--- a/views/delete.hbs
+++ b/views/delete.hbs
@@ -15,8 +15,8 @@
 </head>
 <body>
     
-<h3>Are you sure you want to delete the following character?</h3>
+<h4>Are you sure you want to delete the following character?</h4>
 <p>Name: {{char_name}}</p>
 <form action="/character/{{id}}/delete" method="post">
-      <input class="btn black" type="submit" value="Delete Character" />
+      <input class="btn red darken-4" type="submit" value="Delete Character" />
 </form>
