--- a/views/character.hbs
+++ b/views/character.hbs
@@ -77,6 +77,7 @@
     <input class="btn black" type="submit" value="Save Changes"/>
     <a href="/character/{{id}}/notes" class="btn black">Notes</a>
     <a href="/character/{{id}}/roll" class="btn black">Roll</a>
+    <a href="/character/{{id}}/{{class}}" class="btn black">Class Moves</a>
 </div>
 <div class="col s1 right">
     <a href="/character/{{id}}/delete" class="btn red darken-4"><i class="material-icons">delete_forever</i></a>
