--- a/views/barbarian.hbs
+++ b/views/barbarian.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-  <h4 class="center black white-text">Starting Moves</h4>
+  <h4 class="center black white-text">Barbarian Starting Moves</h4>
   <div class="col s6">
     <em>Choose one of these to start with:</em>
     <p>
