--- a/views/barbarian.hbs
+++ b/views/barbarian.hbs
@@ -5,18 +5,18 @@
     <p>
       <label>
         <input type="checkbox" class="filled-in" />
-        <span>
-            <h6>Full Plate and Packing Steel. </h6>
-            <p>You ignore the clumsy tag on armor you wear.</p>
+        <span class="black-text">
+            <b>Full Plate and Packing Steel</b> <br>
+            You ignore the clumsy tag on armor you wear.
         </span>
       </label>
     </p>
     <p>
       <label>
         <input type="checkbox" class="filled-in" />
-        <span>
-            <h6>Unencumbered, unharmed </h6>
-            <p>So long as you are below your Load and neither wear armor nor carry a shield, take +1 armor.</p>
+        <span class="black-text">
+            <b>Unencumbered, Unharmed</b> <br>
+            So long as you are below your Load and neither wear armor nor carry a shield, take +1 armor.
         </span>
       </label>
     </p>
@@ -25,21 +25,20 @@
     <p>
       <label>
         <input type="checkbox" class="filled-in" checked="checked" />
-        <span>
-            <h6>The Upper Hand</h6>
-            <p>You take +1 ongoing to last breath rolls. When you take your last breath, on a 7–9 you make an offer to Death in return for your life. If Death accepts he will return you to life. If not, you die.</p>
+        <span class="black-text">
+            <b>The Upper Hand</b><br>
+            You take +1 ongoing to last breath rolls. When you take your last breath, on a 7–9 you make an offer to Death in return for your life. If Death accepts he will return you to life. If not, you die.
         </span>
       </label>
     </p>
     <p>
       <label>
         <input type="checkbox" class="filled-in" checked="checked" />
-        <span>
-            <h6>What Are You Waiting For?</h6>
-            <p>When you cry out a challenge to your enemies, roll+Con.
-                On a 10+ they treat you as the most obvious threat to be dealt with and ignore your companions, take +2 damage ongoing against them.
-                On a 7–9 only a few (the weakest or most foolhardy among them) fall prey to your taunting.
-            </p>
+        <span class="black-text">
+            <b>What Are You Waiting For?</b><br>
+            When you cry out a challenge to your enemies, roll+Con.
+            On a 10+ they treat you as the most obvious threat to be dealt with and ignore your companions, take +2 damage ongoing against them.
+            On a 7–9 only a few (the weakest or most foolhardy among them) fall prey to your taunting.
         </span>
       </label>
     </p>
@@ -48,49 +47,36 @@
         <p>
       <label>
         <input type="checkbox" class="filled-in" checked="checked" />
-        <span>
-            <h6>Herculean Appetites</h6>
-            <p>Others may content themselves with just a taste of wine, or dominion over a servant or two, but you want more. Choose two appetites. While pursuing one of your appetites if you would roll for a move, instead of rolling 2d6 you roll 1d6+1d8. If the d6 is the higher die of the pair, the GM will also introduce a complication or danger that comes about due to your heedless pursuits.
-            </p>
+        <span class="black-text">
+            <b>Herculean Appetites</b><br>Others may content themselves with just a taste of wine, or dominion over a servant or two, but you want more. Choose two appetites. While pursuing one of your appetites if you would roll for a move, instead of rolling 2d6 you roll 1d6+1d8. If the d6 is the higher die of the pair, the GM will also introduce a complication or danger that comes about due to your heedless pursuits.
             <label>
                 <input type="checkbox" class="filled-in"  />
-                <span>
-                    <p>Pure destruction</p>
+                <span class="black-text">Pure destruction
                 </span>
-            </label>
+            </label><br>
             <label>
                 <input type="checkbox" class="filled-in"  />
-                <span>
-                    <p>Power over others
-                    </p>
+                <span class="black-text">Power over others
                 </span>
-            </label>
+            </label><br>
             <label>
                 <input type="checkbox" class="filled-in"  />
-                <span>
-                    <p>Mortal pleasures
-                    </p>
+                <span class="black-text">Mortal pleasures
                 </span>
-            </label>
+            </label><br>
             <label>
                 <input type="checkbox" class="filled-in"  />
-                <span>
-                    <p>Conquest
-                    </p>
+                <span class="black-text">Conquest
                 </span>
-            </label>
+            </label><br>
             <label>
                 <input type="checkbox" class="filled-in"  />
-                <span>
-                    <p>Riches and property
-                    </p>
+                <span class="black-text">Riches and property
                 </span>
-            </label>
+            </label><br>
             <label>
                 <input type="checkbox" class="filled-in"  />
-                <span>
-                    <p>Fame and glory
-                    </p>
+                <span class="black-text">Fame and glory
                 </span>
             </label>
         </span>
@@ -99,10 +85,10 @@
     <p>
       <label>
         <input type="checkbox" class="filled-in" checked="checked" />
-        <span>
-            <h6>Musclebound</h6>
-            <p>While you wield a weapon it gains the forceful and messy tags.
-            </p>
+        <span class="black-text">
+            <b>Musclebound</b><br>
+            While you wield a weapon it gains the forceful and messy tags.
+            
         </span>
       </label>
     </p>
