--- a/views/barbarian.hbs
+++ b/views/barbarian.hbs
@@ -88,9 +88,211 @@
         <span class="black-text">
             <b>Musclebound</b><br>
             While you wield a weapon it gains the forceful and messy tags.
-            
         </span>
       </label>
     </p>
     </div>
+  </div>
+<hr>
+<div class="row">
+    <div class="col s12">
+  <h4 class="center black white-text">Barbarian Advanced Moves</h4>
+  <p class="center"><em>When you gain a level from 2-10, you may choose from these moves:</em></p>
+  </div>
+  <div class="col s6">
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>Still Hungry</b> <br>
+            Choose an additional appetite.
+        </span>
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>Appetite For Destruction</b> <br>
+            Take a move from the Fighter, Bard, or Thief class list. You may not take multiclass moves from those classes.        </span>
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>My Love For You Is Like A Truck</b><br>
+            When you perform a feat of strength, name someone present whom you have impressed and take +1 forward to parley with them.        </span>
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>What Is Best In Life</b><br>
+            At the end of a session, if during this session you have crushed your enemies, seen them driven before you, or have heard the lamentations of their kinfolk mark XP.
+        </span>
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>Wide-Wanderer</b><br>
+            You’ve travelled the wide world over. When you arrive someplace ask the GM about any important traditions, rituals, and so on, they’ll tell you what you need to know.        </span>
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>Usurper</b><br>
+            When you prove yourself superior to aperson in power, take +1 forward with their followers, underlings, and hangers on.      
+      </label>
+    </p>
+    </div>
+    <div class="col s6">
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>Khan of Khans</b><br>
+            Your hirelings always accept the gratuitous fulfillment of one of your appetites as payment.
+      <label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>Samson</b><br>
+            You may take a debility to immediately break free of any physical or mental restraint.<br>
+        </span>
+      </label>
+    </p>
+     <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>Smash!</b><br>
+            When you Hack & Slash, on a 12+ deal your damage and choose something physical your target has (a weapon, their position, a limb): they lose it.   
+        </span>   
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>Indestructible Hunger</b><br>
+            When you take damage you can choose to take -1 ongoing until you sate one of your appetites instead of taking the damage. If you already have this penalty you cannot choose this option.<br>
+        </span>
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>Eye For Weakness</b><br>
+            When you Discern Realities add "What here is weak or vulnerable?" to the list of questions you can ask.        
+        </span>
+      </label>
+    </p>
+     <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>On The Move</b><br>
+            When you defy a danger caused by movement (maybe falling off a narrow bridge or rushing past an armed guard) take +1.        
+        </span>   
+      </label>
+    </p>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col s12">
+  <p class="center"><em>When you gain a level from 6-10, you may choose from these moves:</em></p>
+  </div>
+  <div class="col s6">
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>A Good Day To Die</b> <br>
+            As long as you have less than your CON in current HP (or 1, whichever is higher) take +1 ongoing.
+        </span>
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>Kill 'Em All</b> <br>
+            <em>Requires: Appetite For Destruction</em><br>
+            Take another move from the Fighter, Bard, or Thief class list. You may not take multiclass moves from those classes.   
+        </span>   
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>War Cry</b><br>
+            When you enter the battle with a show of force, roll +CHA. On a 10+, both. On a 7-9, one or the other:<br>
+                - Your allies are rallied and take +1 forward.<br>
+                - Your enemies feel fear and act accordingly (avoiding you, hiding, attacking with fear-driven abandon)    
+        </span>
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>Mark of Might</b><br>
+            When you take this move and spend some uninterrupted time reflecting on your past glories, you may mark yourself with a symbol of your power (a long braid tied with bells, ritual scars or tattoos, etc.) Any intelligent mortal creature who sees this symbol knows instinctively that you are a force to be reckoned with and treats you appropriately.
+        </span>
+      </label>
+    </p>
+    </div>
+    <div class="col s6">
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>More! Always More!</b><br>
+            When you satisfy an appetite to the extreme (destroying something unique and significant, gaining enormous fame, riches, power, etc.) you may choose to resolve it. Cross it off the list and mark XP. While you may pursue that appetite again, you no longer feel the burning desire you once did. In its place, choose a new appetite from the list or write your own.
+      <label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>The One Who Knocks</b><br>
+            When you Defy Danger, on a 12+ you turn the danger back on itself, the GM will describe how.<br>
+        </span>
+      </label>
+    </p>
+     <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>Healthy Distrust</b><br>
+            Whenever the unclean magic wielded by mortal men causes you to Defy Danger, treat any result of 6- as a 7–9.   
+        </span>   
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" />
+        <span class="black-text">
+            <b>For The Blood God</b><br>
+            You are initiated in the old ways, the ways of sacrifice. Choose something your gods (or the ancestor spirits, or your totem, etc) value—gold, blood, bones or the like. When you sacrifice those things as per your rites and rituals, roll+WIS. • On a 10+ the GM will grant you insight into your current trouble or a boon to help you.
+            On a 7-9 the sacrifice is not enough and your gods take of your flesh as well, but still grant you some insight or boon.
+            On a miss, you earn the ire of the fickle spirits.<br>
+        </span>
+      </label>
+    </p>
+    </div>
+  </div>
+ <div class="center">
+    <a href="/character/{{id}}/" class="btn black ">Character Sheet</a>
   </div>
